Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
   <head>
     <meta charset='utf-8' />
     <meta http-equiv="X-UA-Compatible" content="chrome=1" />
-    <meta name="description" content="Thcontactpicker : An iOS view used for selecting multiple contacts. This view mimic the contact selection in the Apple Mail app" />
+    <meta name="description" content="THContactPicker : An iOS view used for selecting contacts. This view is inspired by the contact selection in iOS Mail and Messages apps" />
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
-    <title>Thcontactpicker</title>
+    <title>THContactPicker</title>
   </head>
 
   <body>
@@ -18,8 +18,8 @@
         <header class="inner">
           <a id="forkme_banner" href="https://github.com/tristanhimmelman/THContactPicker">View on GitHub</a>
 
-          <h1 id="project_title">Thcontactpicker</h1>
-          <h2 id="project_tagline">An iOS view used for selecting multiple contacts. This view mimic the contact selection in the Apple Mail app</h2>
+          <h1 id="project_title">THContactPicker</h1>
+          <h2 id="project_tagline">An iOS view used for selecting contacts. This view is inspired by the contact selection in iOS Mail and Messages apps</h2>
 
             <section id="downloads">
               <a class="zip_download_link" href="https://github.com/tristanhimmelman/THContactPicker/zipball/master">Download this project as a .zip file</a>
@@ -66,7 +66,7 @@
     <!-- FOOTER  -->
     <div id="footer_wrap" class="outer">
       <footer class="inner">
-        <p class="copyright">Thcontactpicker maintained by <a href="https://github.com/tristanhimmelman">tristanhimmelman</a></p>
+        <p class="copyright">THContactPicker maintained by <a href="https://github.com/tristanhimmelman">tristanhimmelman</a></p>
         <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
       </footer>
     </div>
